--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,6 +1,6 @@
 <!-- Portfolio Grid Section -->
 <div class="portfolio-grid">
-    {% for item in site.products %}
+    {% for item in site.portfolio %}
     <div class="portfolio-cell">
         <a class="portfolio-link" data-keyboard="true" href="{{ item.url | relative_url }}">
             <div class="caption" title="{{ item.title }}">
