products(BeStronger): improve screenshot text

--- a/_includes/bestronger_screenshot.html
+++ b/_includes/bestronger_screenshot.html
@@ -1,25 +1,54 @@
 <!-- Portfolio Grid Section -->
+<style>
+    .screenshot-description {
+        height: 50%;
+    }
+    .screenshot-image {
+        height: 50%;
+    }
+</style>
+
 <div >
     <div class="row">
         <div class="column">
             <img alt="" class="" src="/assets/img/screenshots/bestronger_screenshot_00.png">
         </div>
-        <div class="column"><h2>See what's the session of today</h2></div>
-        <div class="column"><h2>Keep track of your training programs</h2></div>
+        <div class="column">
+            <div class="screenshot-description"></div>
+                <h2>See what's the session of today</h2>
+            <div class="screenshot-description"></div>
+        </div>
+        <div class="column">
+            <div class="screenshot-description"></div>
+                <h2>Keep track of your training programs</h2>
+            <div class="screenshot-description"></div>
+        </div>
         <div class="column">
             <img alt="" class="" src="/assets/img/screenshots/bestronger_screenshot_01.png">
         </div>
         <div class="column">
             <img alt="" class="" src="/assets/img/screenshots/bestronger_screenshot_02.png">
         </div>
-        <div class="column"> <h2>Look at the detail of each set</h2></div>
-        <div class="column"><h2>text 2</h2></div>
+        <div class="column">
+            <div class="screenshot-description"></div>
+                <h2>Look at the detail of each set</h2>
+            <div class="screenshot-description"></div>
+        </div>
+        <div class="column">
+            <div class="screenshot-description"></div>
+                <h2>See your statistics</h2>
+            <div class="screenshot-description"></div>
+        </div>
         <div class="column">
             <img alt="" class="" src="/assets/img/screenshots/bestronger_screenshot_03.png">
         </div>
         <div class="column">
             <img alt="" class="" src="/assets/img/screenshots/bestronger_screenshot_04.png">
         </div>
-        <div class="column"><h2>See your statistics</h2></div>
+        <div class="column">
+            <div class="screenshot-description"></div>
+                <h2>Use the calendar to see the following sessions</h2>
+            <div class="screenshot-description"></div>
+        </div>
     </div>
 </div>
