products(GameGallery): updated screenshots and texts

--- a/_includes/gamegallery_screenshot.html
+++ b/_includes/gamegallery_screenshot.html
@@ -9,7 +9,7 @@
     }
     #screenshot-dark-image {
         border-radius: 8px;
-        width: 50%;
+        width: 30%;
     }
 </style>
 
@@ -25,7 +25,7 @@
         </div>
         <div class="column">
             <div class="screenshot-description"></div>
-            <h2>Create your videogames catalogue</h2>
+            <h2>Get the details of the game</h2>
             <div class="screenshot-description"></div>
         </div>
         <div class="column">
@@ -39,12 +39,21 @@
             <h2>Search new titles</h2>
             <div class="screenshot-description"></div>
         </div>
+            <div class="column">
+                <div class="screenshot-description"></div>
+                <h2>Create your personal catalogue</h2>
+                <div class="screenshot-description"></div>
+            </div>
+        <div class="column">
+            <img alt="" class="" src="/assets/img/screenshots/gamegallery_screenshot_03.jpg">
+        </div>
         <div >
             <h2>Dark is even better!</h2>
         </div>
         <div class="row">
-            <img id="screenshot-dark-image" alt="" class="" src="/assets/img/screenshots/gamegallery_screenshot_03.png">
-            <img id="screenshot-dark-image" alt="" class="" src="/assets/img/screenshots/gamegallery_screenshot_04.png">   
+            <img id="screenshot-dark-image" alt="gamegallery-screenshot-00-dark" class="" src="/assets/img/screenshots/gamegallery_screenshot_00_dark.jpg">
+            <img id="screenshot-dark-image" alt="gamegallery-screenshot-01-dark" class="" src="/assets/img/screenshots/gamegallery_screenshot_01_dark.jpg">   
+            <img id="screenshot-dark-image" alt="gamegallery-screenshot-02-dark" class="" src="/assets/img/screenshots/gamegallery_screenshot_02_dark.jpg">
         </div>
     </div>
 </div>
