fix(Products): Change permalink

--- a/_includes/default/navbar.liquid
+++ b/_includes/default/navbar.liquid
@@ -27,7 +27,7 @@
             </li>
             <li class="separator"> | </li>
             <li>
-                <a  class="clear" aria-label="Products" title="Products" href="/portfolio/"> Products
+                <a  class="clear" aria-label="Products" title="Products" href="/products/"> Products
                 </a>
             </li>
                 <li class="separator"> | </li>
