graphic(Cross): e1cbb7 as main foregroundColor

--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -55,7 +55,7 @@ html[data-theme="dark"] {
   --blockquote: #373e47; // blockquote
   --selection: #545d68; // selection
   --meta: #909dab; // meta
-  --link: #00a8e0; // theme, link, link shadow header bg
+  --link: #e1cbb7; // theme, link, link shadow header bg
   --header-background: #2A3444; // Color before header image load
   --header-text: #e7f3f4; // header text, feature img text
   --header-link: #adbac7; // header link, search color
@@ -64,8 +64,8 @@ html[data-theme="dark"] {
   --text-shadow: #2d333b; // text shadow
   --text: #cdd9e5; // text
   --h1: #d40059; // headers
-  --h2: #b37eff;
-  --h3: #ff66c2;
+  --h2: #EDE0D4;
+  --h3: #e1cbb7;
   --h4: #00af9e;
   --h5: #6bac00;
   --h6: #ff5c00;
