--- a/_sass/includes/_footer.scss
+++ b/_sass/includes/_footer.scss
@@ -7,6 +7,11 @@
   color: var(--meta);
   font-size: 0.9em;
 
+ .footer-container {
+    display: grid;
+    grid-template-columns: 50% 25% 25%;
+ } 
+
   .footer-icons {
     ul {
       list-style: none;
