--- a/_sass/includes/_footer.scss
+++ b/_sass/includes/_footer.scss
@@ -7,15 +7,30 @@
   color: var(--meta);
   font-size: 0.9em;
 
- .footer-container {
+
+.footer-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.cookie-policy {
+    margin: 0.67em 0;
+}
+
+
+@media (min-width: 600px) {
+  .footer-container {
     display: grid;
-    grid-template-columns: 50% 25% 25%;
- } 
+    grid-template-columns: 200px 1fr 200px;
+    grid-template-rows: auto 1fr auto;
+
+  }
+}
 
   .footer-icons {
     ul {
       list-style: none;
-      margin: 0;
+      margin: 0;;
 
       li {
         display: inline;
