--- a/_includes/gamegallery_screenshot.html
+++ b/_includes/gamegallery_screenshot.html
@@ -11,9 +11,33 @@
         border-radius: 8px;
         width: 30%;
     }
+    .button-grid {
+        justify-content: center;
+        display: grid;
+        padding: 3rem;
+    }
+    .button-item {
+        background-color: #EDE0D4;
+        border-radius: 2rem;
+        border: none;
+        padding: 1rem;
+        font-size: 1.5rem;
+        font-family: inherit;   
+        color: black;
+        padding-right: 1.5rem;
+        padding-left: 1.5rem;
+    }
 </style>
 
 <div>
+    <div class="button-grid" style="align-items: center;">
+        <a href="https://play.google.com/store/apps/details?id=com.game_gallery">
+            <Button class="button-item">
+                <i style="color: black;" class="fab fa-google-play fa-1.5x"></i>
+                Download from Google Play
+            </Button>
+        </a>
+    </div>
     <div class="row">
         <div class="column">
             <img alt="" class="" src="/assets/img/screenshots/gamegallery_screenshot_00.jpg">
