--- a/_includes/idispensa_screenshot.html
+++ b/_includes/idispensa_screenshot.html
@@ -8,9 +8,34 @@
         height: 70%;
     }
 
+    .button-grid {
+        justify-content: center;
+        display: grid;
+        padding: 3rem;
+    }
+    .button-item {
+        background-color: #EDE0D4;
+        border-radius: 2rem;
+        border: none;
+        padding: 1rem;
+        font-size: 1.5rem;
+        font-family: inherit;   
+        color: black;
+        padding-right: 1.5rem;
+        padding-left: 1.5rem;
+    }
+
 </style>
 
 <div>
+    <div class="button-grid" style="align-items: center;">
+        <a href="https://apps.apple.com/us/app/Dispensa/id1519593445">
+            <Button class="button-item">
+                <i style="color: black;" class="fab fa-apple fa-1.5x"></i>
+                Download from Apple Store
+            </Button>
+        </a>
+    </div>
     <div class="row">
         <div class="column">
             <img alt="" class="" src="/assets/img/screenshots/idispensa_screenshot_00.png">
