--- a/_includes/gamegallery_screenshot.html
+++ b/_includes/gamegallery_screenshot.html
@@ -1,16 +1,14 @@
 <!-- Portfolio Grid Section -->
 <style>
     .screenshot-description {
-        height: 50%;
+        height: 40%;
     }
 
     .screenshot-image {
-        height: 50%;
+        max-width: 100%;
+    max-height: 100%;
     }
-    #screenshot-dark-image {
-        border-radius: 8px;
-        width: 30%;
-    }
+
     .button-grid {
         justify-content: center;
         display: grid;
@@ -27,6 +25,21 @@
         padding-right: 1.5rem;
         padding-left: 1.5rem;
     }
+
+    .container {
+  display: flex;
+  flex-direction: row;
+  /* height: 15rem; */
+  margin-bottom: 3rem;
+}
+
+.container-item {
+  background-color: brown;
+    height: fit-content;
+    width: max-content;
+    width: 50%;
+}
+
 </style>
 
 <div>
@@ -40,7 +53,7 @@
     </div>
     <div class="row">
         <div class="column">
-            <img alt="" class="" src="/assets/img/screenshots/gamegallery_screenshot_00.jpg">
+            <img alt="" class="" src="/assets/img/screenshots/gamegallery_screenshot_00.png">
         </div>
         <div class="column">
             <div class="screenshot-description"></div>
@@ -53,10 +66,10 @@
             <div class="screenshot-description"></div>
         </div>
         <div class="column">
-            <img alt="" class="" src="/assets/img/screenshots/gamegallery_screenshot_01.jpg">
+            <img alt="" class="" src="/assets/img/screenshots/gamegallery_screenshot_01.png">
         </div>
         <div class="column">
-            <img alt="" class="" src="/assets/img/screenshots/gamegallery_screenshot_02.jpg">
+            <img alt="" class="" src="/assets/img/screenshots/gamegallery_screenshot_02.png">
         </div>
         <div class="column">
             <div class="screenshot-description"></div>
@@ -69,15 +82,21 @@
                 <div class="screenshot-description"></div>
             </div>
         <div class="column">
-            <img alt="" class="" src="/assets/img/screenshots/gamegallery_screenshot_03.jpg">
+            <img alt="" class="" src="/assets/img/screenshots/gamegallery_screenshot_03.png">
         </div>
         <div >
             <h2>Dark is even better!</h2>
         </div>
-        <div class="row">
-            <img id="screenshot-dark-image" alt="gamegallery-screenshot-00-dark" class="" src="/assets/img/screenshots/gamegallery_screenshot_00_dark.jpg">
-            <img id="screenshot-dark-image" alt="gamegallery-screenshot-01-dark" class="" src="/assets/img/screenshots/gamegallery_screenshot_01_dark.jpg">   
-            <img id="screenshot-dark-image" alt="gamegallery-screenshot-02-dark" class="" src="/assets/img/screenshots/gamegallery_screenshot_02_dark.jpg">
+        <div class="container" >
+            <div class="container-item">
+                <img id="screenshot-dark-image" class="screenshot-dark-image" alt="gamegallery-screenshot-00-dark"  src="/assets/img/screenshots/gamegallery_screenshot_00_dark.png">
+            </div>
+            <div class="container-item">
+                <img id="screenshot-dark-image" class="screenshot-dark-image" alt="gamegallery-screenshot-01-dark" class="screenshot-image" src="/assets/img/screenshots/gamegallery_screenshot_01_dark.png">   
+            </div>
+            <div class="container-item">
+                <img id="screenshot-dark-image" class="screenshot-dark-image" alt="gamegallery-screenshot-02-dark" class="screenshot-image" src="/assets/img/screenshots/gamegallery_screenshot_02_dark.png">
+            </div>
         </div>
     </div>
 </div>
